--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="./templates/code.html" class="navOptions hvr-grow">Coding</a>
         <a href="./templates/gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./templates/anime.html" class="navOptions hvr-grow">Anime</a>
+        <a href="./templates/lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
       </nav>
     </header>
 
@@ -41,9 +42,9 @@
   </div>
 
   <footer>
-    <a href="https://github.com/nabilkhalil"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-128.png"/></a>
-    <a href="http://steamcommunity.com/id/FoxyDuo"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/steam-128.png"/></a>
-    <a href="http://kissanime.ru/"><img class="socialIcons" src="http://img.koplayer.com/icon/com.dgamestudio.games.narutoquiz.png"/></a>
+    <a href="https://github.com/nabilkhalil" target="blank"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-128.png"/></a>
+    <a href="http://steamcommunity.com/id/FoxyDuo" target="blank"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/steam-128.png"/></a>
+    <a href="http://kissanime.ru/" target="blank"><img class="socialIcons" src="http://img.koplayer.com/icon/com.dgamestudio.games.narutoquiz.png"/></a>
   </footer>
 </div>  <script src="./js/script.js"></script>
 </body>
