added entrepeneur and blog

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="./templates/gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./templates/anime.html" class="navOptions hvr-grow">Anime</a>
         <a href="./templates/lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
+        <a href="./templates/blog.html" class="navOptions hvr-grow">Blog</a>
+        <a href="./templates/entrepreneur.html" class="navOptions hvr-grow">Entrepreneur</a>
       </nav>
     </header>
 
