changed color of intro p

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <a name="aboutme"><h1 id="aboutMeTitle">About Me</h1></a>
     <img id="nabilImg" src="./images/nabil.png" width="220"/>
-    <p class="aboutMeP">Hey, my name is Nabil Khalil and I'm currently 15 years old. I enjoy doing a lot of things but the things that I can write about the most will be what you see. In this case it would be Coding, Anime, and playing Video Games.</p>
+    <p class="aboutMeP2">Hey, my name is Nabil Khalil and I'm currently 15 years old. I enjoy doing a lot of things but the things that I can write about the most will be what you see. In this case it would be Coding, Anime, and playing Video Games.</p>
   </div>
 
   <footer>
