--- a/index.html
+++ b/index.html
@@ -41,14 +41,20 @@
     <p id="aboutMeP">Hey, my name is Nabil Khalil and I'm currently 15 years old. I enjoy doing a lot of things but the things that I can write about the most will be what you see. In this case it would be Coding, Anime, and playing Video Games.</p>
   </div>
 
-  <h2 id="gmHeader">Google Maps API Below</h2>
 
-  <div id="map"></div>
 
   <footer>
     <a href="https://github.com/nabilkhalil" target="blank"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-128.png"/></a>
     <a href="http://steamcommunity.com/id/FoxyDuo" target="blank"><img class="socialIcons" src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/steam-128.png"/></a>
     <a href="http://kissanime.ru/" target="blank"><img class="socialIcons" src="http://img.koplayer.com/icon/com.dgamestudio.games.narutoquiz.png"/></a>
+    <h2 id="gmHeader">Google Maps API Below</h2>
+    <div id="map"></div>
+    <br/>
+    <br/>
+    <br/>
+    <span>@copyright 2020</span>
+    <br/>
+    <br/>
   </footer>
 </div>
 
